--- a/module-3/04/package.json
+++ b/module-3/04/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
+    "build-tsc": "tsc",
+    "dev": "ts-node src/server.ts",
+    "start": "npm run build-tsc && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
