--- a/module-3/08/package.json
+++ b/module-3/08/package.json
@@ -13,12 +13,19 @@
     "@prisma/client": "^5.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/handlebars": "^4.1.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.2",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.11.0"
   },
   "devDependencies": {
